# smpc-cpp

./: CMakeLists.txt  input_peer.cc  main.cc  multiplication.cc  utils.cc
includes/: combinations.h  egtopos.h  input_peer.h  multiplication.h  problem.h  truth_table.h  unsecproto.h  utils.h
lib/: combinations.cc  input_peer.cc  multiplication.cc  truth_table.cc  unsecproto.cc  utils.cc
tests/: unit.cc
topos/: egtopos.cc
