cmake_minimum_required (VERSION 2.8) 
project (smpc)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${smpc_SOURCE_DIR}/cmake_components")
if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    set(CMAKE_CXX_FLAGS "-stdlib=libc++")
endif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories(${smpc_SOURCE_DIR}/includes)
#find_package(Boost 1.55 EXACT REQUIRED COMPONENTS system)
#if (Boost_FOUND)
    #message("boost found ${Boost_INCLUDE_DIRS} ${Boost_LIBRARIES}")
    #include_directories(${Boost_INCLUDE_DIRS})
    #add_definitions(-DBOOST_LOG_DYN_LINK)
#else ()
    #message(FATAL_ERROR "Boost 1.55 not found")
#endif(Boost_FOUND)

find_package(igraph)
if (IGRAPH_FOUND)
    include_directories(${IGRAPH_INCLUDE_DIRS})
    message(${IGRAPH_INCLUDE_DIRS})
else()
    message(FATAL_ERROR "igraph not found")
endif (IGRAPH_FOUND)

file(GLOB smpc_sources . lib/*.cc)
file(GLOB unit_tests . tests/*.cc)
file(GLOB test_topos . topos/*.cc)

add_executable(smpc_test ${smpc_sources} ${test_topos} main.cc)
add_executable(tests ${unit_tests} ${smpc_sources} ${test_topos})

target_link_libraries(smpc_test ${IGRAPH_LIBRARIES}) 
target_link_libraries(tests ${IGRAPH_LIBRARIES}) 

enable_testing()
add_test(NAME unit COMMAND tests)

if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    find_package (Threads)
endif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
