cmake_minimum_required (VERSION 2.8) 
project (smpc)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${smpc_SOURCE_DIR}/cmake_components")
if (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
    set(CMAKE_CXX_FLAGS "-stdlib=libc++")
endif (${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
include_directories(${smpc_SOURCE_DIR}/includes)
include_directories(${smpc_SOURCE_DIR}/ext_includes)

find_package(igraph REQUIRED)
if (IGRAPH_FOUND)
    include_directories(${IGRAPH_INCLUDE_DIRS})
    message(${IGRAPH_INCLUDE_DIRS})
else()
    message(FATAL_ERROR "igraph not found")
endif (IGRAPH_FOUND)

find_package(GMP REQUIRED)
if (GMP_FOUND)
    include_directories(${GMP_INCLUDE_DIR})
else()
    message(FATAL_ERROR "GMP not found")
endif (GMP_FOUND)

file(GLOB smpc_sources . lib/*.cc)
file(GLOB unit_tests . tests/*.cc)
file(GLOB test_topos . topos/*.cc)

add_executable(smpc_test ${smpc_sources} ${test_topos} main.cc)
add_executable(tests ${unit_tests} ${smpc_sources} ${test_topos})

target_link_libraries(smpc_test ${IGRAPH_LIBRARIES}) 
target_link_libraries(tests ${IGRAPH_LIBRARIES}) 
target_link_libraries(smpc_test ${GMP_LIBRARIES}) 
target_link_libraries(tests ${GMP_LIBRARIES}) 
message(${GMP_LIBRARIES})

enable_testing()
add_test(NAME unit COMMAND tests)

if (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
    find_package (Threads)
endif (${CMAKE_SYSTEM_NAME} MATCHES "Linux")
